...
      icon: Icons.whatshot,
      label: 'Raid Day',
    ),
    EventType.event: EventTypeStyle._(
      color: Color(0xFF1E88E5),
      icon: Icons.event,
      label: 'Event',
    ),
    EventType.goBattleLeague: EventTypeStyle._(
      color: Color(0xFF8E24AA),
      icon: Icons.sports_kabaddi,
      label: 'GO Battle League',
    ),
    EventType.goRocket: EventTypeStyle._(
      color: Color(0xFF37474F),
      icon: Icons.rocket_launch,
      label: 'Team GO Rocket',
    ),
...
